syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "TaxiDemo.Grpc";

package taxi;

service Taxi {
	rpc GetAll (google.protobuf.Empty) returns (TaxiList);
}

message TaxiList{
	repeated TaxiItem items = 1;
}

message TaxiItem{
string id = 1;
string name = 2;
double price = 3;
int32 quantity = 4;

}